--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -15,13 +15,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up C++ environment
-        run: sudo apt-get update && sudo apt-get install -y g++ make
+        run: sudo apt-get update && sudo apt-get install g++ make
 
       - name: Compile C++ code
         run: g++ -o my_program *.cpp  # Compile all C++ files
-
-      - name: Set execute permissions
-        run: chmod +x my_program  # Ensure the binary is executable
-
+        
       - name: Run the C++ program
         run: ./my_program
